// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles ADD_TODO 1`] = `
Array [
  Object {
    "completed": false,
    "id": 0,
    "text": "Learn Redux",
  },
]
`;

exports[`handles CLEAR_COMPLETED 1`] = `
Array [
  Object {
    "completed": false,
    "id": 0,
    "text": "Learn Electron",
  },
]
`;

exports[`handles COMPLETE_ALL 1`] = `
Array [
  Object {
    "completed": true,
    "id": 1,
    "text": "Learn ES6",
  },
  Object {
    "completed": true,
    "id": 0,
    "text": "Learn Webpack",
  },
]
`;

exports[`handles DELETE_TODO 1`] = `
Array [
  Object {
    "completed": false,
    "id": 0,
    "text": "Learn Redux",
  },
]
`;

exports[`handles EDIT_TODO 1`] = `
Array [
  Object {
    "completed": false,
    "id": 1,
    "text": "Learn Electr",
  },
]
`;
